# Lunar-GameEngine

./: .gitignore  .gitmodules  0002-HotReload.patch  AssetSystemDesign.md  CMakeGenerate.bat  CMakeLists.txt  FileSystemDesign.md  README.md  boost_build.bat  build.bat  cmake-build-vs2017.bat  color.ps  color.vs  config.ini  default_layout.ini  full-build-vs2017.bat  full-build-vs2019.bat  generate_sln.bat  imgui.ini  json_build.bat  log.txt  sh.exe.stackdump  shadertoolsconfig.json  todolist.txt
assets/: color.hlsl  (+6 more)
src/Animation/: CMakeLists.txt
src/Animation/Animation/: AnimationModule.cpp
src/AppEditor/: CMakeLists.txt  EditorMain.cpp
src/AppGame/: CMakeLists.txt  GameMain.cpp
src/AssetImport/: CMakeLists.txt
src/AssetImport/AssetImport/: AssetImportBinding.cpp  AssetImportCommon.cpp  MeshAssetImport.cpp  ResourceImportBinding.cpp  SceneAssetImport.cpp
src/Core/: CMakeLists.txt
src/Core/Core/: CoreBinding.cpp  CoreLibrary.cpp
src/Game/: CMakeLists.txt  Camera.cpp  GameMain.cpp  GameModule.cpp  Light.cpp  MeshRenderer.cpp  RenderComponent.cpp  Scene.cpp  SceneEnv.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/Graphics/: RenderModule.cpp
src/ImGui/: CMakeLists.txt  imconfig.h
src/ImGui/backends/: imgui_impl_sdl2.cpp
src/Lib/AssetImport/: AssetImportBinding.cpp  AssetImportCommon.cpp  CMakeLists.txt  MeshAssetImport.cpp
src/Lib/FbxParser/: CMakeLists.txt  FbxImporterBinding.cpp  FbxImporterFunc.cpp
src/Lib/GltfParser/: CMakeLists.txt  GltfImporterBinding.cpp  GltfImporterFunc.cpp
src/Lib/ImportScene/: CMakeLists.txt  ImportDataCommon.cpp  ImportDataMesh.cpp  ImportScene.cpp  ImportSceneBinding.cpp
src/Lib/ObjParser/: CMakeLists.txt  ObjImporterBinding.cpp  ObjImporterFunc.cpp
src/Lib/ResourceImportBinding/: CMakeLists.txt  ResourceImportBinding.cpp
src/Luna/: CMakeLists.txt  LunaMain.cpp
src/app_editor/: CMakeLists.txt  main.cpp
src/app_game/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core_bindings.cpp  core_config.h  core_library.cpp  core_library.h  core_types.h  pch.h
src/core/asset/: asset.cpp  asset.h  asset_module.cpp  asset_module.h  binary_asset.cpp  binary_asset.h  json_asset.cpp  json_asset.h
src/core/binding/: CMakeLists.txt  binding.h  binding_math.h  binding_module.cpp  binding_module.h  binding_proxy.h  binding_python.h  binding_traits.h  function_wrap.h
src/core/config/: config.cpp  config.h  config_manager.cpp  config_manager.h
src/core/core/: core_bindings.cpp  core_library.cpp
src/core/event/: EventModule.cpp  EventModule.h  event_module.cpp  event_module.h
src/core/file/: async_handle.h  file.cpp  file.h  path.cpp  path.h  platform_file.cpp  platform_file.h  platform_module.cpp  platform_module.h  window.cpp  window.h
src/core/foundation/: config.cpp  config.h  container.cpp  container.h  foundation.ixx  linera_grow_map.cppx  linera_grow_map.hx  log.cpp  log.h  misc.cpp  misc.h  segmental_allocator_map.hx  signal.h  string.cpp  string.h
src/core/framework/: application.cpp  application.h  luna_core.cpp  luna_core.h  module.cpp  module.h
src/core/log/: log.cpp  log.h  log_msg.cpp  log_msg.h
src/core/math/: lunar_math.cpp  lunar_math.h  math.cpp  math.h  math_binding.cpp  math_binding.h
src/core/memory/: garbage_collector.cpp  garbage_collector.h  ptr.cpp  ptr.h  ptr_binding.h
src/core/misc/: container.cpp  container.h  fast_id.h  linera_grow_map.h  misc.h  path.cpp  path.h  profile.h  segmental_allocator_map.cpp  segmental_allocator_map.h  signal.h  string.cpp  thread_safe_map.h  uuid.cpp  uuid.h
src/core/murmur3hash/: LMemoryHash.cpp  LMemoryHash.h
src/core/object/: base_object.cpp  base_object.h  component.cpp  component.h  ecs_module.h  entity.cpp  entity.h  shared_object.cpp  shared_object.h  transform.cpp  transform.h
src/core/platform/: file.cpp  platform_file.cpp  platform_module.cpp
src/core/reflection/: method.h  method_traits.h  property.cpp  property.h  reflection.cpp  reflection.h  type.cpp  type.h  type_traits.h  variant.h
src/core/serialization/: dict_data.cpp  dict_data.h  serialization.cpp  serialization.h
src/core/thread/: thread.cpp  thread.h
src/editor_exe/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine_config.h  light.cpp  light.h  mesh_renderer.cpp  mesh_renderer.h  pch.h  render_component.cpp  render_component.h  scene.cpp  scene.h  scene_module.cpp  scene_module.h
src/engine/core/: CMakeLists.txt  application.h  core_configs.cpp  core_configs.h  core_module.h  linux_test.cpp  private_core.cpp  private_core.h
src/engine/core_test/: CMakeLists.txt  core_test.cpp
src/engine/imgui/: CMakeLists.txt  debug_layer.h  imconfig.h
src/engine/legacy_render/: CMakeLists.txt  private_render.cpp  private_render.h  render_context.h  render_subsystem.cpp  render_subsystem.h
src/engine/lua/: CMakeLists.txt
src/engine/lua_bind/: CMakeLists.txt  lua_env.cpp  lua_env.h  lua_module.h  lua_script.cpp  lua_script.h  lua_string.h  lua_subsystem.cpp  lua_subsystem.h  private_lua.h
src/engine/lua_bind_test/: CMakeLists.txt  lua_bind_test.cpp
src/engine/render/: CMakeLists.txt  private_render.cpp  private_render.h  render_subsystem.cpp  render_subsystem.h
src/engine/window/: CMakeLists.txt  event_subsystem.cpp  luna_window.cpp  luna_window.h  lunar_window.cpp  lunar_window.h  private_window.h  win32_window.cpp  window_subsystem.cpp  window_subsystem.h
src/game/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  game_config.h  game_main.cpp  game_module.cpp  game_module.h  light.cpp  light.h  main.cpp  mesh_renderer.cpp  mesh_renderer.h  render_component.cpp  render_component.h  scene.cpp  scene.h  scene_module.cpp  scene_module.h
src/luna/: CMakeLists.txt  luna_main.cpp
src/render/: CMakeLists.txt  forward_types.h  pch.cpp  pch.h  render_config.h  render_module.cpp  render_module.h
test/core_test/: CMakeLists.txt  asset_test.cpp  eigen_test.cpp  file_test.cpp  log_test.cpp  main.cpp  pancy_test.cpp  string_test.cpp
test/fbx_test/: CMakeLists.txt  main.cpp
test/game_test/: CMakeLists.txt  main.cpp
(+1413 files in other folders)
